// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remark should parse globals page 1`] = `
"# typedoc-plugin-remark

## CustomTOC

- [Variables](#variables)
  - [someVariable](#somevariable)
- [Functions](#functions)
  - [some_function()](#some_function)

## Variables

### someVariable

> \`const\` **someVariable**: \`true\` = \`true\`

## Functions

### some_function()

> **some_function**(\`param\`): \`void\`

#### Parameters

| Parameter | Type     |
| :-------- | :------- |
| \`param\`   | \`string\` |

#### Returns

\`void\`
"
`;

exports[`Remark should parse globals page without toc 1`] = `
"# typedoc-plugin-remark

## Variables

### someVariable

> \`const\` **someVariable**: \`true\` = \`true\`

## Functions

### some_function()

> **some_function**(\`param\`): \`void\`

#### Parameters

| Parameter | Type     |
| :-------- | :------- |
| \`param\`   | \`string\` |

#### Returns

\`void\`
"
`;

exports[`Remark should parse members class page 1`] = `
"---
title: 'test'
---

# Class: SomeClass\\<T>

- list item 1

## Contents

- [Type parameters](#type-parameters)
- [Constructors](#constructors)
  - [new SomeClass()](#new-someclass)
- [Properties](#properties)
  - [someProp](#someprop)

## Type parameters

| Type parameter |
| :------------- |
| \`T\`            |

## Constructors

### new SomeClass()

> **new SomeClass**<\`T\`>(): [\`SomeClass\`](SomeClass.md)<\`T\`>

#### Returns

[\`SomeClass\`](SomeClass.md)<\`T\`>

## Properties

### someProp

> **someProp**: \`string\`
"
`;

exports[`Remark should parse members index 1`] = `
"# typedoc-plugin-remark

## Modules

- [module-1](module-1/README.md)
- [module-2](module-2/README.md)
"
`;

exports[`Remark should parse members module page 1`] = `
"---
title: 'test'
---

# module-1

Comments form module comments

Thanks [**@tgrey**](https://github.com/tgrey) please see issue [#1](https://github.com/typedoc2md/typedoc-plugin-markdown/issues/1).

\`\`\`js
reallyUgly(javascript);
\`\`\`

\`\`\`css
.h1 {
  color: red;
}
\`\`\`

## Index

### Classes

- [SomeClass](classes/SomeClass.md)

### Interfaces

- [SomeInterface](interfaces/SomeInterface.md)

### Variables

- [\\_\\_variable_with_underscores\\_\\_](variables/variable_with_underscores.md)

### Functions

- [some_function](functions/some_function.md)
"
`;

exports[`Remark should parse modules index 1`] = `
"# typedoc-plugin-remark

## Modules

+ [module-1](module-1.md)
+ [module-2](module-2.md)
"
`;

exports[`Remark should parse modules module page 1`] = `
"---
title: "test"
---

# module-1

Comments form module comments

Thanks [**@tgrey**](https://github.com/tgrey) please see issue [#1](https://github.com/typedoc2md/typedoc-plugin-markdown/issues/1).

~~~js
reallyUgly    (
javascript
 )
~~~

~~~css
.h1 {     color : red }
~~~

## Contents

+ [Classes](#classes)
  + [SomeClass\\<T>](#someclasst)
+ [Interfaces](#interfaces)
  + [SomeInterface\\<T>](#someinterfacet)
+ [Variables](#variables)
  + [\\_\\_variable\\_with\\_underscores\\_\\_](#__variable_with_underscores__)
+ [Functions](#functions)
  + [some\\_function()](#some_function)

## Classes

### SomeClass\\<T>

+ list item 1

#### Type parameters

| Type parameter |
| :------------- |
| \`T\`            |

#### Constructors

##### new SomeClass()

> **new SomeClass**<\`T\`>(): [\`SomeClass\`](module-1.md#someclasst)<\`T\`>

###### Returns

[\`SomeClass\`](module-1.md#someclasst)<\`T\`>

#### Properties

##### someProp

> **someProp**: \`string\`

## Interfaces

### SomeInterface\\<T>

#### Type parameters

| Type parameter |
| :------------- |
| \`T\`            |

#### Properties

##### anotherProp

> **anotherProp**: \`T\`

##### someProp

> **someProp**: \`string\`

## Variables

### \\_\\_variable\\_with\\_underscores\\_\\_

> \`const\` **\\_\\_variable\\_with\\_underscores\\_\\_**: \`true\` = \`true\`

## Functions

### some\\_function()

> **some\\_function**(\`param\`): \`void\`

#### Parameters

| Parameter | Type                  |
| :-------- | :-------------------- |
| \`param\`   | \`string\` \\| \`boolean\` |

#### Returns

\`void\`
"
`;
